parser/src/snapshots/rapidus_parser__simple_expr_shift3.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: BinaryOp(
                    Node {
                        base: Number(
                            1.0,
                        ),
                        loc: Loc(line:1,column:0,pos:0),
                    },
                    Node {
                        base: Number(
                            2.0,
                        ),
                        loc: Loc(line:1,column:6,pos:6),
                    },
                    ZFShr,
                ),
                loc: Loc(line:1,column:6,pos:6),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
