parser/src/snapshots/rapidus_parser__simple_expr_unary7.snap
---
source: parser/src/lib.rs
expression: parser.parse_all().unwrap()

---
Node {
    base: StatementList(
        [
            Node {
                base: UnaryOp(
                    Node {
                        base: Identifier(
                            "a",
                        ),
                        loc: Loc(line:1,column:1,pos:1),
                    },
                    Not,
                ),
                loc: Loc(line:1,column:0,pos:0),
            },
        ],
    ),
    loc: Loc(line:1,column:0,pos:0),
}
